<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MGMT_main.AddUsageHistory">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="98dp"
        android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/trim"
            android:src="@drawable/villive_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#454040"
            android:text="@string/main_mgmt_addcost"
            android:textColor="#FF454040"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="80dp">


        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:text="@string/usage_history_text2" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="130dp">


        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/usage_month" />

        <Spinner
            android:id="@+id/sp_month"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_yellow"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="180dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/usage_item" />


        <Spinner
            android:id="@+id/sp_item"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_yellow"
            tools:ignore="MissingConstraints" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="190dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/trim"
            app:srcCompat="@drawable/rectangletangle" />

        <EditText
            android:id="@+id/et_cost"
            android:layout_width="238dp"
            android:layout_height="50dp"
            android:autofillHints="@string/usage_history_text"
            android:ems="10"
            android:hint="@string/usage_history_text"
            android:layout_marginStart="26dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangletangle"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#E6D8AD"
            android:textColor="@color/black"
            android:text="@string/usage_add" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="250dp">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/usage_history_text3" />

        <ListView
            android:id="@+id/lv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </ListView>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="250dp">


        <Button
            android:id="@+id/btn_clr_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/dahong"
            android:textColor="@color/black"
            android:text="@string/usage_text" />
    </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>