<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MGMT_main.AddNotice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="98dp"
        android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/trim"
            android:src="@drawable/villive_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#454040"
            android:text="@string/add_notice"
            android:textColor="#FF454040"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="80dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_notice_text1"
            android:textColor="@color/real_dark_gray" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="130dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="380dp"
            android:layout_height="330dp"
            android:layout_gravity="center"
            android:contentDescription="@string/trim"
            app:srcCompat="@drawable/rectangle_real_gray" />

        <EditText
            android:id="@+id/et_notice_input"
            android:layout_width="360dp"
            android:layout_height="310dp"
            android:layout_gravity="center"
            android:background="#F1F7F4"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:hint="@string/add_notice_text2"
            android:autofillHints="내용을 입력하세요."/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="480dp">

        <Button
            android:id="@+id/btn_add_noti"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="#FFF099"
            android:text="@string/add"
            android:textColor="@color/black" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="580dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_notice_text3" />
    </FrameLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>