<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MGMT_Settings.MGMT_change_pw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="98dp"
        android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/villive_logo"
            android:src="@drawable/villive_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#454040"
            android:text="@string/change_pw"
            android:textColor="#FF454040"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="80dp">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trim" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="130dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="380dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/trim"
            app:srcCompat="@drawable/rectangle_green" />

        <EditText
            android:id="@+id/et_current_pw"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="현재 비밀번호"
            android:background="@color/green"
            android:ems="10"
            android:hint="@string/current_pw"
            android:inputType="textPassword" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="230dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="380dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/trim"
            app:srcCompat="@drawable/rectangle_yellow" />

        <EditText
            android:id="@+id/et_wanttochange"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="변경할 비밀번호"
            android:background="@color/real_yellow"
            android:ems="10"
            android:hint="@string/want_change_pw"
            android:inputType="textPassword" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="330dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="380dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/trim"
            app:srcCompat="@drawable/rectangle_yellow" />

        <EditText
            android:id="@+id/et_pw_check"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="비밀번호 확인"
            android:background="@color/real_yellow"
            android:ems="10"
            android:hint="@string/pw_check"
            android:inputType="textPassword" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="430dp">


        <Button
            android:id="@+id/btn_refactor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#FF806C6C"
            android:text="@string/refactor" />
    </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>