<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MGMT_main.Settings"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="660dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="MissingConstraints">



        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/villive_logo"
            android:src="@drawable/villive_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#454040"
            android:text="@string/settings"
            android:textColor="#FF454040"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="80dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/underline"
            app:srcCompat="@drawable/underline_green" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vill_management"
            android:textColor="@color/real_dark_gray"
            android:textSize="26sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="160dp">

        <ImageButton
            android:id="@+id/ibtn_change_pw"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gray_outline_rectangle"
            android:contentDescription="@string/change_pw"
            android:text="@string/change_pw" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_pw"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/real_dark_gray" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="230dp">

        <ImageButton
            android:id="@+id/ibtn_add_vill"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gray_outline_rectangle"
            android:contentDescription="@string/add_vill"
            android:text="@string/add_vill" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_vill"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/real_dark_gray" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="300dp">

        <ImageButton
            android:id="@+id/ibtn_change_vill"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gray_outline_rectangle"
            android:contentDescription="@string/change_vill"
            android:text="@string/change_vill" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_vill"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/real_dark_gray" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="370dp">

        <ImageButton
            android:id="@+id/ibtn_noti_set"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gray_outline_rectangle"
            android:contentDescription="@string/notification_setting"
            android:text="@string/notification_setting" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notification_setting"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/real_dark_gray" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="440dp">

        <ImageButton
            android:id="@+id/ibtn_logout"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gray_outline_rectangle"
            android:contentDescription="@string/logout"
            android:text="@string/logout" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/real_dark_gray" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="510dp">

        <ImageButton
            android:id="@+id/ibtn_rm_member"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gray_outline_rectangle"
            android:contentDescription="@string/rm_member"
            android:text="@string/rm_member" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rm_member"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/real_dark_gray" />

    </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="580dp">


            <Button
                android:id="@+id/btn_PIPP"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end|bottom"
                android:background="#00FF0000"
                android:text="@string/PIPP"
                android:textColor="@color/dark_gray" />

        </FrameLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>